Set I18n in views [Work and Customers] and custom validations

--- a/config/locales/default/de.yml
+++ b/config/locales/default/de.yml
@@ -75,7 +75,7 @@ de:
   helpers:
     select:
       prompt: "Bitte wählen"
-
+    form: '%{model} Formular'
     submit:
       create: '%{model} erstellen'
       update: '%{model} aktualisieren'
