Add new migration 'fee' to work and and implement it into views

--- a/config/locales/models/de.yml
+++ b/config/locales/models/de.yml
@@ -13,6 +13,7 @@ de:
         ended_at: "Ende"
         description: "Beschreibung"
         duration: "Dauer"
+        fee: "Vergütung"
       customer:
         shortname: "Kurzname"
       location:
