--- a/config/locales/default/en.yml
+++ b/config/locales/default/en.yml
@@ -25,6 +25,7 @@ en:
       default: "%a, %d %b %Y %H:%M:%S %z"
       short: "%d %b %H:%M"
       long: "%d %B, %Y %H:%M"
+      date: "%d-%m-%Y"
     am: "am"
     pm: "pm"
 
