--- a/config/locales/default/de.yml
+++ b/config/locales/default/de.yml
@@ -11,6 +11,7 @@ de:
       short: "%e. %b"
       long: "%e. %B %Y"
       only_day: "%e"
+      only_month: "%b"
       day_with_date: "%a. %d.%m."
 
     day_names: [Sonntag, Montag, Dienstag, Mittwoch, Donnerstag, Freitag, Samstag]
